# piano_leds

./: CMakeLists.txt  globals.h  main.c  main.h  main_ambient.c  main_piano.c
led_patterns/: color_utils.c  color_utils.h  led_patterns.c  led_patterns.h
rpi_ws281x/: gpio.h  mailbox.h  pcm.h  pwm.c  rpihw.c  ws2811.c  ws2811.h
src/: globals.h
src/led_patterns/: ambient.c  ambient.h  color_utils.c  color_utils.h  core.c  core.h  led_patterns.c  led_patterns.h  led_patterns_ambient.c  led_patterns_ambient.h  led_patterns_core.c  led_patterns_core.h  led_patterns_piano.c  led_patterns_piano.h  piano.c  piano.h  utils.c  utils.h
src/pipe/: pipe.c  pipe.h
src/rpi_ws281x/: clk.h  dma.c  dma.h  mailbox.c  pcm.c  pcm.h  pwm.h  rpihw.h  ws2811.h
